...
                android:layout_marginEnd="10dp"
                android:backgroundTint="?attr/colorPrimary"
                android:theme="@style/Theme.GithubUser.SearchView.AppBar"
                app:iconifiedByDefault="false"
                app:queryHint="@string/search"
                app:searchIcon="@drawable/ic_search"
                android:id="@+id/sv_main"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.fragment.app.FragmentContainerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
...
