...

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="4dp"
                android:clipToPadding="false"
                android:id="@+id/rv_users"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
