...
                card_view:layout_constraintStart_toStartOf="@+id/tv_item_name"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
                card_view:layout_constraintBottom_toBottomOf="@+id/iv_item_avatar"
                card_view:drawableStartCompat="@drawable/ic_users"
                card_view:drawableTint="?attr/colorOnBackground"
                tools:text="69 followers"
                android:id="@+id/tv_item_follower"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:gravity="center"
...
